--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://pbs.twimg.com/profile_images/839703444810190848/oNzH3uYG_400x400.jpg class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
