[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
      upload image Successfully.
+     IMAD, India's largest MOOC, is back and it's bigger and better than before. This course will cover the basics of the Internet, building a web application, databases, performance and security, and building a mobile application. In addition, the course will have an extensive set of Practical Tutorials which will help students get a feel for real-world development. IMAD offers opportunities for internships at Hasura for the course toppers, thus helping the best students hone their application development skills in the real world. 
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
