[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
      upload image Successfully.
      IMAD, India's largest MOOC, is back and it's bigger and better than before. This course will cover the basics of the Internet, building a web application'
-     <a href="https://onlinecourses.nptel.ac.in/noc17_cs40/course">HTML Images</a>
+     <a href="https://onlinecourses.nptel.ac.in/noc17_cs40/course">Home of the web page</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
