--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,10 @@
         <br>
         <div class="center text-big bold">
      upload image Successfully.
-     IMAD, India's largest MOOC, is back and it's bigger and better than before. This course will cover the basics of the Internet, building a web application'
-     <a href="https://onlinecourses.nptel.ac.in/noc17_cs40/course">Home of the web page</a>
+     IMAD, India's largest MOOC, is back and it's bigger and better than before. This course will cover the basics of the Internet, building a web application.
+     
         </div>
+        <a href="https://onlinecourses.nptel.ac.in/noc17_cs40/course">Home of the web page</a>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
