[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <a href="https://onlinecourses.nptel.ac.in/noc17_cs40/course">Home of the web page</a>
+        <a href="http://nikey746684.imad.hasura-app.io/">Same Page</a>
+        <a href="https://www.w3schools.com/html/html_links.asp">for More details abput html</a>
         <div class="center">
             <img src="https://pbs.twimg.com/profile_images/839703444810190848/oNzH3uYG_400x400.jpg" class="img-medium"/>
         </div>
